# PILT

./: .gitignore  README.md  config.py  main.py  plot_results.py  setup_ns3ai.sh
cpp_proto/: CMakeLists.txt  README.md  run_demo.sh
cpp_proto/bench/: compare_protocols.cpp
cpp_proto/demo/: parameter_server.cpp  worker.cpp
cpp_proto/include/common/: grad_codec.hpp  tcp.hpp  types.hpp
cpp_proto/include/dctcp/: protocol.hpp
cpp_proto/include/ltp/: protocol.hpp
cpp_proto/include/pilt/: aggregator.hpp  encoder.hpp  types.hpp  wire.hpp
cpp_proto/include/plot/: protocol.hpp
cpp_proto/src/: aggregator.cpp  encoder.cpp  wire.cpp
cpp_proto/tests/: test_dctcp_ltp_plot.cpp  test_encoder.cpp  test_round_trip.cpp  test_wire.cpp
cpp_proto/viz/: dashboard.html  sim_to_json.py
federated/: __init__.py  dataset.py  model_torch.py
protocols/: __init__.py  autotuner.py  ltp_protocol.py  pilt_protocol.py  plot_protocol.py
